<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/constraintMainReg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imgBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/reg"
            android:textColor="@color/black"
            android:textSize="36sp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/ed_corner"
            android:fontFamily="@font/roboto"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ed_corner"
            android:fontFamily="@font/roboto"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_black"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/next"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_black"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrivecy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:visibility="gone"
            android:fontFamily="@font/roboto"
            android:textSize="13sp"
            android:layout_marginTop="30dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>